# knowyourcompany

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICK_COMMANDS.md  README.md
backend/: .env.example  CHECKLIST.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_COMPLETE.md  README.md  SUMMARY.md  clear_all_data.py  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/: routes.py
backend/app/connectors/: __init__.py  ambitionbox_connector.py  glassdoor_connector.py  linkedin_connector.py  reddit_connector.py  x_connector.py
backend/app/core/: config.py  logging.py
backend/app/models/: __init__.py  company.py
backend/app/services/: cache.py  company_aggregator.py  repository.py  scoring.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
