[project]
name = "backend"
version = "0.1.0"
description = "Company Authenticity Checker - Know Your Company Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
]
